# open-deep-research-w-firecrawl

./: .env.example  .gitignore  AGENTS.md  README.md  api.py  config.py  coordinator.py  firecrawl_tools.py  main.py  planner.py  prompts.py  pyproject.toml  research_result.md  task_splitter.py
