[project]
name = "firecrawl-smolagents-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "smolagents[litellm,openai]>=1.23.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "firecrawl-py>=1.0.0",
]
