[project]
name = "openai-agents-deep-research"
version = "0.1.0"
description = "Multi-agent deep research using OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "openai-agents>=0.0.16",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "firecrawl-py>=1.0.0",
]
